# COOL-Compiler

./: README.md
Canner & Parser/cool-examples/: test2.cl  test3.cl
Canner & Parser/reference-binaries/: cgen
Canner & Parser/src/: bison_test_bad.cl  parser
CodeGen1/: README
CodeGen1/mp2_ec_testcases/: block copy.cl  block2.cl  comp0.cl  comp1.cl  condfalse.cl  condtrue.cl  div.cl  emptylet.cl  ifff.cl  leqfalse.cl  leqtrue.cl  letassign.cl  letinittrap.cl  letmultiple2.cl  letnestedy.cl  local4bool.cl  loop.cl  loop2.cl  nestif.cl  nestlettt.cl  simple.cl  sub.cl
CodeGen1/mp2_testcases/: Makefile  add.cl  anot3.cl  arith.cl  block.cl  eqtrue.cl  letbool.cl  letnestedx.cl  letsame.cl  local2ifelse.cl  local31whileeq.cl  loop3.cl  nottrue.cl  ret20.cl
CodeGen1/results/: result.txt
CodeGen1/scripts/: compare.sh  compare_ec.sh
CodeGen1/src/: coolrt.cc  coolrt.h
CodeGen1/src_llvm/: cgen.cc  cool_tree.handcode.h
CodeGen1/test/: assign.cl  bool.cl  nestlett.cl  num.cl  s.cl  simlet.cl  simple.cl
CodeGen1/test_llvm/: Makefile  bool.cl  nestlet.cl  nestlettt.cl  nf.cl  s.cl
CodeGenFull/: README  cgen_case.cc  cgen_comment.cc
CodeGenFull/mp3_ec_testcases/: Makefile  selftype.cl
CodeGenFull/reference-binaries/: parser
Optimization/: CMakeLists.txt  README.md  RegisterPasses.cpp  ScalarReplAggregates-zhihaow6.cpp  UnitLICM.cpp  UnitLoopInfo.cpp  UnitLoopInfo.h  UnitSCCP.cpp  test.sh
Optimization/tests/: simple.c  simple.ll
RegAlloc/: RegAllocSimple.cpp  store.cpp
mp3_handout/: cgen_comment.h
mp5_handout/: UnitLICM.cpp  UnitSCCP.h
(+236 files in other folders)
